fixed 'pending tasks' button display to align with new verbiage

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,3 +69,12 @@
     text-outline: #b30000;
 
 }
+
+.approve-task {
+  display: -webkit-inline-box;
+  margin: -5px;
+}
+
+.approve-task div {
+  margin: 3px
+}
